rayonette/tests/ui/fail/capturing_closure_still_rejected.stderr
error[E0080]: evaluation panicked: a `.net_map` task function must not capture; use a named function or a non-capturing closure
 --> $RUST/core/src/panic.rs
  |
  |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<std::iter::Once<u32> as rayonette::fleet::NetMapExt>::net_map_task::<{closure@$DIR/tests/ui/fail/capturing_closure_still_rejected.rs:9:46: 9:59}, u32>::{constant#0}` failed here
  |
 ::: src/fleet.rs
  |
  | /             assert!(
  | |                 size_of::<F>() == 0,
  | |                 "a `.net_map` task function must not capture; use a named function or a non-capturing closure"
  | |             );
  | |_____________- in this macro invocation

note: erroneous constant encountered
 --> src/fleet.rs
  |
  | /         const {
  | |             assert!(
  | |                 size_of::<F>() == 0,
  | |                 "a `.net_map` task function must not capture; use a named function or a non-capturing closure"
  | |             );
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn <std::iter::Once<u32> as rayonette::fleet::NetMapExt>::net_map_task::<{closure@$DIR/tests/ui/fail/capturing_closure_still_rejected.rs:9:46: 9:59}, u32>`
 --> src/fleet.rs
  |
  |         self.net_map_task(key, map)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
